feat: allow setting default model enable as chat, memory, embedding
